discovered strange bug while implementing wordClock

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,6 @@
     "files.exclude": {
         "**/pxt_modules": true,
         "**/.pxt": true
-    }
+    },
+    "makefile.configureOnOpen": true
 }
